add cors and css
